update react peerDeps

--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "webpack-dev-server": "^3.1.14"
   },
   "peerDependencies": {
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react": "^16.3.0, ^17, ^18",
+    "react-dom": "^16.3.0, ^17, ^18"
   },
   "dependencies": {
     "prop-types": "^15.6.0",
